--- a/app/src/main/res/layout/activity_save_intenal.xml
+++ b/app/src/main/res/layout/activity_save_intenal.xml
@@ -41,7 +41,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="5"
-                android:text="Visualizar" />
+                android:text="Visualizar"
+                android:id="@+id/botReadPhotoInternal"/>
 
         </LinearLayout>
 
